[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_Master/AudioRelated/GUI/AudioSettingsPanel/Subs/AudioBusVolumePanel/AudioBusVolumePanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_SliderStandard/PlayerGUI_SliderStandardV.tscn" type="PackedScene" id=2]

[node name="AudioBusVolumePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 106.0
margin_bottom = 169.0
mouse_filter = 2

[node name="SliderStandard" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 106.0
margin_bottom = 165.0

[node name="MuteButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 53.0
margin_top = 169.0
margin_right = 53.0
margin_bottom = 169.0
focus_mode = 0
size_flags_horizontal = 6

[connection signal="visibility_changed" from="." to="." method="_on_AudioBusVolumePanel_visibility_changed"]
[connection signal="mouse_entered" from="VBoxContainer/MuteButton" to="." method="_on_MuteButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/MuteButton" to="." method="_on_MuteButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/MuteButton" to="." method="_on_MuteButton_pressed"]
